redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis
        app: 'redis'
    spec:
      containers:
      - image: redis
        name: randomkube-cache
        ports:
        - containerPort: 80
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: randomkube-cache
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
