server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: server
    spec:
      containers:
      - env:
        - name: REDIS_URL
          value: redis://randomkube-cache
        image: localhost:5000/server
        name: server
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
